# drf-shop

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  setup.py
drf_shop/: __init__.py  admin.py  apps.py  models.py  serializers.py  settings.py  urls.py  views.py
drf_shop/migrations/: 0001_initial.py
purchase/: exceptions.py  models.py  selves.py  serializers.py  simples.py  urls.py  utils.py  views.py
purchase/migrations/: 0001_initial.py  0002_alter_payment_order.py  0002_auto_20210722_1025.py  0003_payment_ref_id.py  0004_alter_price_product.py  0005_item_price.py  0006_remove_payment_verify.py  0007_auto_20210801_1418.py  0008_auto_20210804_1556.py  0009_alter_payment_type_id.py  0010_product_order_limit.py  0011_price_role.py
