[project]
name = "drf-shop"
version = "0.1.0"
description = "Basic models, serializers, and view to quickly create a shop"
authors = [
    { name = "Xurvan", email = "xurvan@tutanota.com" },
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = " Apache-2.0" }
dependencies = []

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
